# TRD_Caribe_School

./: .gitignore  README.md  manage.py  pyproject.toml
app_auth/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
app_auth/migrations/: 0001_initial.py  0002_alter_user_address.py  0002_user_is_email_verified.py  0003_remove_user_dni_number.py  0003_rename_phone_user_phone_number.py  0004_remove_user_address_remove_user_updated_at_and_more.py
app_config/: admin.py  apps.py  models.py  urls.py  views.py
app_config/migrations/: 0001_initial.py  0002_rename_phone_contactrequest_phone_number.py
app_products/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
app_products/migrations/: 0001_initial.py  0002_remove_products_public_products_available.py  0003_alter_reviews_unique_together.py
app_statistics/: apps.py  models.py  views.py
app_statistics/migrations/: 0001_initial.py  0002_alter_salestatistics_amount.py  0003_alter_salestatistics_amount.py
app_store/: admin.py  apps.py  models.py  urls.py  views.py
app_store/migrations/: 0001_initial.py  0002_invoices_delivery_details.py  0003_rename_phone_invoices_phone_number.py  0004_alter_invoices_status.py  0005_alter_invoices_invoice_file.py  0006_invoices_processed.py  0007_alter_invoices_created_at.py
static/css/: auth.css  cart.css  email_alerts.css  invoice.css  styles.css
static/js/: cart.js  login.js  (+5 more)
templates/: base.html  footer.html  header.html  index.html  navbar.html  productcard.html  productcard2.html
trd_caribe/: asgi.py  settings.py  urls.py  wsgi.py
(+26 files in other folders)
