[tool.poetry]
name = "trd-caribe"
version = "0.1.0"
description = ""
authors = ["L1vDev <livdev.rguez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
django-unfold = "^0.50.0"
dotenv = "^0.9.9"
python-decouple = "^3.8"
pillow = "^11.2.1"
pyjwt = "^2.10.1"
xhtml2pdf = "^0.2.17"
django-private-storage = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
